# remylau

./: .gitignore  LICENSE  README.md  pyproject.toml
dotfiles/: .bashrc  .condarc  .gitconfig  .tmux.conf  .vimrc  .zshrc  .zshrc.pre-oh-my-zsh
dotfiles/.config/nvim/: init.lua
dotfiles/.config/nvim/after/plugin/: airline.lua  cmp.lua  color.lua  comment.lua  completion.lua  devicons.lua  diffview.lua  gitsigns.lua  ibl.lua  keybinds.lua  lsp.lua  lspkind.lua  lualine.lua  mason.lua  null_ls.lua  telescope.lua  todo-comments.lua  treesitter.lua  trouble.lua
dotfiles/.config/nvim/lua/remylau/: keybinds.lua  plugins.lua  settings.lua
dotfiles/.config/nvim/lua/remylau/special_config/: copilot.lua
dotfiles/.ssh/: config
dotfiles/_deprecated/: .vimrc
dotfiles/_deprecated/.config/nvim/: init.vim
envs/: requirements_basic.txt  requirements_dl_cpu.txt
notes/: README.md
scripts/download_netrepo/: README.md  get_netrepo_data.py  netrepo.csv
src/remylau/: config.py  utils.py
src/remylau/bioinfo/: gene_pubmed_counts.py
