[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remylau"
version = "0.1.0-dev"
description = "A collection of scripts used by Remy Lau."
readme = "README.md"

authors = [
    {name = "Remy Liu", email = "liurenmi@msu.edu"},
]
license = {text = "MIT"}

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
]

dependencies = [
    "click",
    "matplotlib",
    "mygene",
    "ndex2",
    "numba",
    "numpy>=1.20.0",
    "pandas",
    "pyOpenSSL>=23.1.1",
    "pyarrow",
    "pyyaml",
    "requests",
    "scikit-learn>=1.0.0",
    "scipy",
    "seaborn",
    "tabulate",  # print dataframe as markdown table
    "tqdm",
]

[project.urls]
home = "https://github.com/RemyLau/remylau"
bug-tracker = "https://github.com/RemyLau/remylau/issues"

[project.optional-dependencies]
dev = [
    "bump2version",
    "pre-commit",
]

[tool.setuptools]
license-files = ["LICENSE"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false  # disable scanning PEP 420 namespaces

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true
